[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Game/Spawner/Spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game/Stage.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/NotoSansUI_Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Textures/Stage/StageForeground.png" type="Texture" id=5]
[ext_resource path="res://Resources/Textures/Packet/Packet_glow2.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Game/GameOverScreen.gd" type="Script" id=7]
[ext_resource path="res://Resources/Audio/SFX/game_over.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Audio/Music/game.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scripts/Game/PassedParticle.gd" type="Script" id=10]
[ext_resource path="res://Resources/Audio/SFX/passed_good.wav" type="AudioStream" id=11]
[ext_resource path="res://Resources/Audio/SFX/passed_bad.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Audio/SFX/start_glitch.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/Fonts/NotoSansUI_Regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.180645, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.858065, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.384106, 0.543046 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 224
font_data = ExtResource( 4 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 1

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 192
font_data = ExtResource( 4 )

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float amount = 0.2;
uniform float speed = 0.6;


float random2d(vec2 n) { 
	return fract(sin(dot(n, vec2(12.9898, 4.1414))) * 43758.5453);
}

float randomRange (in vec2 seed, in float min, in float max) {
	return min + random2d(seed) * (max - min);
}

float insideRange(float v, float bottom, float top) {
	return step(bottom, v) - step(top, v);
}
   
void fragment()
{
	float time = floor(TIME * speed * 60.0);    
	vec2 uv = SCREEN_UV;
	
	vec3 outCol = texture(SCREEN_TEXTURE, uv).rgb;
	
	float maxOffset = amount / 2.0;
	for (float i = 0.0; i < 10.0 * amount; i += 1.0) {
		float sliceY = random2d(vec2(time , 2345.0 + float(i)));
		float sliceH = random2d(vec2(time , 9035.0 + float(i))) * 0.25;
		float hOffset = randomRange(vec2(time , 9625.0 + float(i)), -maxOffset, maxOffset);
		vec2 uvOff = uv;
		uvOff.x += hOffset;
		if (insideRange(uv.y, sliceY, fract(sliceY+sliceH)) == 1.0 ){
			outCol = texture(SCREEN_TEXTURE, uvOff).rgb;
		}
	}
	
	float maxColOffset = amount / 6.0;
	float rnd = random2d(vec2(time , 9545.0));
	vec2 colOffset = vec2(randomRange(vec2(time , 9545.0),-maxColOffset,maxColOffset), 
						  randomRange(vec2(time , 7205.0),-maxColOffset,maxColOffset));
	if (rnd < 0.33) {
		outCol.r = texture(SCREEN_TEXTURE, uv + colOffset).r;
    }
	else if (rnd < 0.66) {
		outCol.g = texture(SCREEN_TEXTURE, uv + colOffset).g;
    }
	else {
		outCol.b = texture(SCREEN_TEXTURE, uv + colOffset).b;  
    }
	COLOR = vec4(outCol,1.0);
}
"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/amount = 0.2
shader_param/speed = 0.6

[sub_resource type="DynamicFont" id=14]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = ExtResource( 14 )

[node name="Stage" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -640.0
margin_right = 360.0
margin_bottom = 640.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
bus = "Music"

[node name="GlitchStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "SFX"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="PassedSoundGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SFX"

[node name="PassedSoundBad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="ColorBg" type="ColorRect" parent="." groups=[
"Game",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1962.0
margin_bottom = 1963.0
mouse_filter = 2
color = Color( 0.168627, 0.141176, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="." groups=[
"Game",
]]
margin_top = -641.0
margin_right = 720.0
margin_bottom = 1922.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Spawner" parent="." groups=[
"Game",
] instance=ExtResource( 1 )]

[node name="PassGradient" type="TextureRect" parent="." groups=[
"Game",
]]
modulate = Color( 0, 0, 0, 0.470588 )
margin_left = 583.0
margin_top = 314.0
margin_right = 910.0
margin_bottom = 760.0
rect_rotation = 89.9999
mouse_filter = 2
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassedParticle" type="CPUParticles2D" parent="."]
position = Vector2( 360, 281 )
emitting = false
amount = 200
lifetime = 1.8
one_shot = true
speed_scale = 2.25
explosiveness = 0.59
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 225, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 1.0
scale_amount = 7.5
color_ramp = SubResource( 3 )
script = ExtResource( 10 )

[node name="GaugeBackground" type="ColorRect" parent="." groups=[
"Game",
]]
margin_top = -838.0
margin_right = 720.0
margin_bottom = 314.0
rect_clip_content = true
color = Color( 0.096, 0.08, 0.1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="." groups=[
"Game",
]]
anchor_right = 1.0
margin_top = 38.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "CONNECTION HEALTH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeDisplay" type="Label" parent="." groups=[
"Game",
]]
anchor_right = 1.0
margin_top = 239.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 4 )
text = "UPTIME: 00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GaugeDisplay" type="Label" parent="." groups=[
"Game",
]]
modulate = Color( 0, 1, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -581.0
margin_bottom = -403.0
custom_fonts/font = SubResource( 5 )
text = "100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glow" type="Sprite" parent="GaugeDisplay"]
self_modulate = Color( 1, 1, 1, 0.376471 )
material = SubResource( 6 )
position = Vector2( 303, 105 )
scale = Vector2( 1.67969, 1.17188 )
texture = ExtResource( 6 )

[node name="Glow2" type="Sprite" parent="GaugeDisplay"]
self_modulate = Color( 1, 1, 1, 0.376471 )
material = SubResource( 6 )
position = Vector2( 409, 105 )
scale = Vector2( 1.67969, 1.17188 )
texture = ExtResource( 6 )

[node name="StreamArea" type="ReferenceRect" parent="." groups=[
"Game",
]]
visible = false
margin_left = 140.0
margin_right = 580.0
margin_bottom = 1280.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorFlash" type="ColorRect" parent="." groups=[
"Game",
]]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -838.0
margin_bottom = 838.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 389.0
margin_bottom = 534.0
custom_fonts/font = SubResource( 8 )
text = "Gauge:
Time:
Chance:
Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="GameOverScreen"]

[node name="ColorBg" type="ColorRect" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1962.0
margin_bottom = 1963.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -25.5
margin_bottom = 25.5
custom_fonts/font = SubResource( 9 )
text = "--CONNECTION DOWN--"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -104.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 9 )
text = "TOTAL UPTIME:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 91.0
margin_bottom = 240.0
mouse_filter = 0
custom_fonts/font = SubResource( 9 )
text = "Retry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalTime" type="Label" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -76.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 10 )
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlitchFilter" type="ColorRect" parent="."]
visible = false
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -838.0
margin_bottom = 838.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -326.0
margin_right = 360.0
margin_bottom = 2603.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 155.0
margin_top = 140.0
margin_right = -155.0
custom_fonts/bold_font = SubResource( 14 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]How to Play:

This is an [b]internet stream of packets.[/b] Incoming packets will come from below and to the top.

Your job is to eliminate [b][color=red]RED PACKETS[/color][/b] by dragging them to the side.

A [b]CONNECTION HEALTH[/b] gauge monitors the connection health. It decreases gradually. Maintain your health by letting [b][color=lime]GREEN PACKETS[/color][/b] pass. Once it hits 0, it's game over.

{ca}
[/center]"
text = "How to Play:

This is an internet stream of packets. Incoming packets will come from below and to the top.

Your job is to eliminate RED PACKETS by dragging them to the side.

A CONNECTION HEALTH gauge monitors the connection health. It decreases gradually. Maintain your health by letting GREEN PACKETS pass. Once it hits 0, it's game over.

{ca}
"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="GameOverScreen/Label3" to="GameOverScreen" method="_on_Label3_gui_input"]
